--- a/index.tex
+++ b/index.tex
@@ -66,46 +66,6 @@
 \fi
 \makeatother
 
-\usepackage{color}
-\usepackage{fancyvrb}
-\newcommand{\VerbBar}{|}
-\newcommand{\VERB}{\Verb[commandchars=\\\{\}]}
-\DefineVerbatimEnvironment{Highlighting}{Verbatim}{commandchars=\\\{\}}
-% Add ',fontsize=\small' for more characters per line
-\usepackage{framed}
-\definecolor{shadecolor}{RGB}{241,243,245}
-\newenvironment{Shaded}{\begin{snugshade}}{\end{snugshade}}
-\newcommand{\AlertTok}[1]{\textcolor[rgb]{0.68,0.00,0.00}{#1}}
-\newcommand{\AnnotationTok}[1]{\textcolor[rgb]{0.37,0.37,0.37}{#1}}
-\newcommand{\AttributeTok}[1]{\textcolor[rgb]{0.40,0.45,0.13}{#1}}
-\newcommand{\BaseNTok}[1]{\textcolor[rgb]{0.68,0.00,0.00}{#1}}
-\newcommand{\BuiltInTok}[1]{\textcolor[rgb]{0.00,0.23,0.31}{#1}}
-\newcommand{\CharTok}[1]{\textcolor[rgb]{0.13,0.47,0.30}{#1}}
-\newcommand{\CommentTok}[1]{\textcolor[rgb]{0.37,0.37,0.37}{#1}}
-\newcommand{\CommentVarTok}[1]{\textcolor[rgb]{0.37,0.37,0.37}{\textit{#1}}}
-\newcommand{\ConstantTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{#1}}
-\newcommand{\ControlFlowTok}[1]{\textcolor[rgb]{0.00,0.23,0.31}{\textbf{#1}}}
-\newcommand{\DataTypeTok}[1]{\textcolor[rgb]{0.68,0.00,0.00}{#1}}
-\newcommand{\DecValTok}[1]{\textcolor[rgb]{0.68,0.00,0.00}{#1}}
-\newcommand{\DocumentationTok}[1]{\textcolor[rgb]{0.37,0.37,0.37}{\textit{#1}}}
-\newcommand{\ErrorTok}[1]{\textcolor[rgb]{0.68,0.00,0.00}{#1}}
-\newcommand{\ExtensionTok}[1]{\textcolor[rgb]{0.00,0.23,0.31}{#1}}
-\newcommand{\FloatTok}[1]{\textcolor[rgb]{0.68,0.00,0.00}{#1}}
-\newcommand{\FunctionTok}[1]{\textcolor[rgb]{0.28,0.35,0.67}{#1}}
-\newcommand{\ImportTok}[1]{\textcolor[rgb]{0.00,0.46,0.62}{#1}}
-\newcommand{\InformationTok}[1]{\textcolor[rgb]{0.37,0.37,0.37}{#1}}
-\newcommand{\KeywordTok}[1]{\textcolor[rgb]{0.00,0.23,0.31}{\textbf{#1}}}
-\newcommand{\NormalTok}[1]{\textcolor[rgb]{0.00,0.23,0.31}{#1}}
-\newcommand{\OperatorTok}[1]{\textcolor[rgb]{0.37,0.37,0.37}{#1}}
-\newcommand{\OtherTok}[1]{\textcolor[rgb]{0.00,0.23,0.31}{#1}}
-\newcommand{\PreprocessorTok}[1]{\textcolor[rgb]{0.68,0.00,0.00}{#1}}
-\newcommand{\RegionMarkerTok}[1]{\textcolor[rgb]{0.00,0.23,0.31}{#1}}
-\newcommand{\SpecialCharTok}[1]{\textcolor[rgb]{0.37,0.37,0.37}{#1}}
-\newcommand{\SpecialStringTok}[1]{\textcolor[rgb]{0.13,0.47,0.30}{#1}}
-\newcommand{\StringTok}[1]{\textcolor[rgb]{0.13,0.47,0.30}{#1}}
-\newcommand{\VariableTok}[1]{\textcolor[rgb]{0.07,0.07,0.07}{#1}}
-\newcommand{\VerbatimStringTok}[1]{\textcolor[rgb]{0.13,0.47,0.30}{#1}}
-\newcommand{\WarningTok}[1]{\textcolor[rgb]{0.37,0.37,0.37}{\textit{#1}}}
 
 \providecommand{\tightlist}{%
   \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}\usepackage{longtable,booktabs,array}
@@ -218,8 +178,7 @@
 \IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
 \urlstyle{same} % disable monospaced font for URLs
 \hypersetup{
-  pdftitle={book},
-  pdfauthor={Norah Jones},
+  pdfauthor={Adelson Guaraci Jantsch},
   colorlinks=true,
   linkcolor={blue},
   filecolor={Maroon},
@@ -228,12 +187,10 @@
   pdfcreator={LaTeX via pandoc}}
 
 
-\title{book}
-\author{Norah Jones}
-\date{2025-06-20}
+\author{Adelson Guaraci Jantsch}
+\date{}
 
 \begin{document}
-\maketitle
 
 \renewcommand*\contentsname{Table of contents}
 {
@@ -244,59 +201,29 @@
 
 \bookmarksetup{startatroot}
 
-\chapter*{Prefácio}\label{prefuxe1cio}
-\addcontentsline{toc}{chapter}{Prefácio}
+\chapter*{Meu caderno de notas}\label{meu-caderno-de-notas}
+\addcontentsline{toc}{chapter}{Meu caderno de notas}
 
-\markboth{Prefácio}{Prefácio}
+\markboth{Meu caderno de notas}{Meu caderno de notas}
 
-Apresentação da página.
+\pandocbounded{\includegraphics[keepaspectratio]{images/clipboard-3286838625.png}}
 
 To learn more about Quarto books visit
 \url{https://quarto.org/docs/books}.
 
-\begin{Shaded}
-\begin{Highlighting}[]
-\DecValTok{1} \SpecialCharTok{+} \DecValTok{1}
-\end{Highlighting}
-\end{Shaded}
-
-\begin{verbatim}
-[1] 2
-\end{verbatim}
-
 \bookmarksetup{startatroot}
 
-\chapter{Introduction}\label{introduction}
+\chapter{Artes}\label{artes}
 
-This is a book created from markdown and executable code.
+\section{Música}\label{muxfasica}
 
-See Knuth (1984) for additional discussion of literate programming.
+\href{https://bandcamp.com/}{Bandcamp}.
 
-\begin{Shaded}
-\begin{Highlighting}[]
-\DecValTok{1} \SpecialCharTok{+} \DecValTok{1}
-\end{Highlighting}
-\end{Shaded}
+\href{https://www.epidemicsound.com/music/featured/?override_referrer=https\%3A\%2F\%2Fwww.epidemicsound.com\%2Foauth_callback\%2F&is_new_user=true}{Epidemic
+Sound}. \#\# Fotografia
 
-\begin{verbatim}
-[1] 2
-\end{verbatim}
-
-\bookmarksetup{startatroot}
-
-\chapter{Summary}\label{summary}
-
-In summary, this book has no content whatsoever.
-
-\begin{Shaded}
-\begin{Highlighting}[]
-\DecValTok{1} \SpecialCharTok{+} \DecValTok{1}
-\end{Highlighting}
-\end{Shaded}
-
-\begin{verbatim}
-[1] 2
-\end{verbatim}
+\href{https://juicyworld.org/alexander-gnatenko/}{Juicy World, Alexander
+Gnatenko}.
 
 \bookmarksetup{startatroot}
 
@@ -324,7 +251,7 @@ uso destes medicamentos. Reformulamos suas dúvidas usando a estratégia
 PICO da seguinte forma:
 
 \begin{longtable}[]{@{}
-  >{\raggedright\arraybackslash}p{(\linewidth - 0\tabcolsep) * \real{1.0028}}@{}}
+  >{\raggedright\arraybackslash}p{(\linewidth - 0\tabcolsep) * \real{1.0000}}@{}}
 \toprule\noalign{}
 \endhead
 \bottomrule\noalign{}
@@ -835,13 +762,82 @@ operates at the nexus of government, business, and health. Our approach
 hinges on our trusted relationships with governments to drive change
 across entire health systems.
 
+\href{https://www.villagereach.org/}{VillageReach} transforms health
+care delivery to reach everyone.
+
+At \href{https://www.gopa.de/\#jump-list-target-191-0}{GOPA Worldwide
+Consultants}, we understand that behind each development project there
+is a human story. For this reason, we favour dynamic development
+cooperation that places beneficiaries at the heart of our work.
+
+At \href{https://www.developmentaid.org/}{DevelopmentAid} we are
+familiar with the challenges you encounter in the development sector.
+Whether you're searching for funding opportunities, partners and experts
+or interested in securing a job in the sector, we are ready to provide
+you with the most innovative business intelligence and career aid tools
+to assist you at every step of your way.
+
+\href{https://www.evaplan.org/}{evaplan GmbH at the University Hospital
+Heidelberg} is a consultancy company that undertakes advisory missions
+and engages in implementation and accompanying research, project
+implementation and capacity building in the field of international
+health and social protection. Our mission is to help improve the health
+of populations and individuals in Low \& Middle Income Countries (LMIC)
+in the first place. Since more than 30 years we bridge the gap between
+academic research and implementation striving to translate scientific
+knowledge and technicity into practice.
+
+\href{https://evaluation.org.uk/about-us/}{UK Evaluation Society}.
+Through our work, we connect people, build learning communities, provide
+expert-led training, and advocate for the importance of evidence-based
+evaluation. Our goal is to share best practice and create a safe
+learning environment where everyone feels welcome, can contribute and be
+heard.
+
+The \href{https://www.adb.org/who-we-are}{Asian Development Bank} (ADB)
+envisions a prosperous, inclusive, resilient, and sustainable Asia and
+the Pacific, while sustaining its efforts to eradicate extreme poverty
+in the region.
+
+\href{https://thepalladiumgroup.com/areas-expertise/health}{Palladium}
+strengthens local partners and communities to take a comprehensive and
+multifaceted approach to improving primary health care.
+
+\href{https://m4health.pro/about-us/}{management4health} was founded in
+2012 as a partnership of health sector professionals specialized in the
+design, the implementation and the monitoring and evaluation of
+international health projects and programmes. Together with our
+partners, we work towards a shared vision of universal health coverage-
+accessible, affordable, appropriate health services for all- through
+stronger health systems. We strive for growth and development in a
+sustainable manner, with the aim of becoming a key stakeholder and
+operator in international health.
+
 \bookmarksetup{startatroot}
 
 \chapter{Research tools and
 Partnerships}\label{research-tools-and-partnerships}
 
+\href{https://www.napcrg.org/}{NAPCRG} supports and nurtures clinicians,
+scientists, students and patients around the world as they pursue
+primary care research.
+
+\href{https://www.adfm.org/programs/brc-fellowship/}{The Building
+Research Capacity (BRC) Fellowship}.
+
 \href{https://saude.prefeitura.rio/comite-de-etica-em-pesquisa/}{Comitê
 de Ética em Pesquisa do Rio de Janeiro}.
+
+\href{https://icphc.iphce.org/}{International Conference on Primary
+Health Care - ICPHC 2025}.
+
+\href{https://healthsystemsfacts.org/?_gl=1\%2A1aq2uve\%2A_up\%2AMQ..\%2A_ga\%2AMTUxMzYxNjc4OS4xNzUwNDcxMTI2\%2A_ga_SDY74B5S30\%2AczE3NTA0NzExMjQkbzEkZzAkdDE3NTA0NzExMjQkajYwJGwwJGgw}{World
+Health Systems Facts} is a project of the~Real Reporting Foundation.
+
+\href{https://www.path.org/what-we-do/}{PATH} advances scientific
+research, engineers cutting-edge technologies, crafts evidence-based
+policies, and scales up resources, tools, and systems that transform
+lives.
 
 \href{https://researchrabbitapp.com/}{Research Rabbit App} - Ferramenta
 que facilita a busca de conexões entre artigos científicos.
@@ -876,6 +872,11 @@ WHO.
 \href{https://research-and-innovation.ec.europa.eu/funding/funding-opportunities/funding-programmes-and-open-calls/horizon-europe/cluster-1-health_en}{European
 Commission - Research and innovation}
 
+The \href{https://implementation.eu/}{European Implementation
+Collaborative} engages a broad range of individual and organisational
+stakeholders in the field of implementation. We build links and exchange
+learning about implementation science and practice within Europe.
+
 \href{https://internationalhealth.charite.de/en/}{The postgraduate study
 programme ``International Health''} is hosted by Institute of
 International Health at Charité -- Universitäsmedizin Berlin and offers
@@ -900,6 +901,12 @@ holistic health care to those who need it the most.
 \href{https://wellcome.org/research-funding}{Welcome.org} - We fund
 research to improve life, health and wellbeing through new knowledge and
 understanding.
+
+The \href{https://www.globalhealth.de/about/}{German Alliance for Global
+Health Research} (GLOHRA) is an association of researchers from public
+research institutions in Germany. We are committed to tackling today's
+global health challenges via interdisciplinary and collaborative global
+health research.
 
 \bookmarksetup{startatroot}
 
@@ -953,11 +960,7 @@ Care Program (SICP) into the workflow.
 \markboth{References}{References}
 
 \phantomsection\label{refs}
-\begin{CSLReferences}{1}{0}
-\bibitem[\citeproctext]{ref-knuth84}
-Knuth, Donald E. 1984. {``Literate Programming.''} \emph{Comput. J.} 27
-(2): 97--111. \url{https://doi.org/10.1093/comjnl/27.2.97}.
-
+\begin{CSLReferences}{0}{1}
 \end{CSLReferences}
 
 
