--- a/research.qmd
+++ b/research.qmd
@@ -45,3 +45,9 @@ The [East, Central and Southern Africa Health Community](https://ecsahc.org/ecsa
 The [German Alliance for Global Health Research](https://www.globalhealth.de/about/){target="_blank" rel="noopener"} (GLOHRA) is an association of researchers from public research institutions in Germany. We are committed to tackling today’s global health challenges via interdisciplinary and collaborative global health research.
 
 
+[Independent Research Fund Denmark](https://dff.dk/en/apply-for-funding/){target="_blank" rel="noopener"} - Apply for research funding and get support for your application.
+
+[Novo Nordisk Foundation](https://novonordiskfonden.dk/en/){target="_blank" rel="noopener"} - We are an independent, Danish enterprise foundation that supports scientific, humanitarian and social causes.
+
+
+
