--- a/finding_consultancies.qmd
+++ b/finding_consultancies.qmd
@@ -39,4 +39,6 @@ The [Asian Development Bank](https://www.adb.org/who-we-are){target="_blank" rel
 
 [management4health](https://m4health.pro/about-us/){target="_blank" rel="noopener"} was founded in 2012 as a partnership of health sector professionals specialized in the design, the implementation and the monitoring and evaluation of international health projects and programmes. Together with our partners, we work towards a shared vision of universal health coverage- accessible, affordable, appropriate health services for all- through stronger health systems. We strive for growth and development in a sustainable manner, with the aim of becoming a key stakeholder and operator in international health.
 
+[Medici con l'Africa Cuamm](https://doctorswithafrica.org/){target="_blank" rel="noopener"}. Our mission is to advocate the universal right to health and promote the values of international solidarity, justice and peace. We work to protect and improve the wellbeing and health of vulnerable communities in Africa with a long-term development perspective.
+
 
