--- a/index.tex
+++ b/index.tex
@@ -813,6 +813,12 @@ stronger health systems. We strive for growth and development in a
 sustainable manner, with the aim of becoming a key stakeholder and
 operator in international health.
 
+\href{https://doctorswithafrica.org/}{Medici con l'Africa Cuamm}. Our
+mission is to advocate the universal right to health and promote the
+values of international solidarity, justice and peace. We work to
+protect and improve the wellbeing and health of vulnerable communities
+in Africa with a long-term development perspective.
+
 \bookmarksetup{startatroot}
 
 \chapter{Research tools and
@@ -907,6 +913,14 @@ Health Research} (GLOHRA) is an association of researchers from public
 research institutions in Germany. We are committed to tackling today's
 global health challenges via interdisciplinary and collaborative global
 health research.
+
+\href{https://dff.dk/en/apply-for-funding/}{Independent Research Fund
+Denmark} - Apply for research funding and get support for your
+application.
+
+\href{https://novonordiskfonden.dk/en/}{Novo Nordisk Foundation} - We
+are an independent, Danish enterprise foundation that supports
+scientific, humanitarian and social causes.
 
 \bookmarksetup{startatroot}
 
